<resources>
    <string name="app_name">BA TECHNOLOGY</string>
    <string name="app_version">Version 1.0</string>
    <string name="developer_email">gauravbordoloi@gmonetix.com</string>
    <string name="copyright">Copyright © 2017 BA TECHNOLOGY. \nAll Right Reserved.</string>
    <string name="pref_group_profile">PROFILE</string>
    <string name="pref_title_name">Your Name</string>
    <string name="default_your_name"> </string>
    <string name="pref_title_email">Your Email</string>
    <string name="default_your_email"> </string>
    <string name="pref_group_others">OTHERS</string>
    <string name="pref_title_copyright">Copyright</string>
    <string name="pref_title_dev_email">Developer Email</string>
    <string name="pref_title_build">Build Version</string>
    <string name="pref_title_term">Term &amp; Policies</string>
    <string name="default_your_number"> </string>
    <string name="pref_title_number">Your Phone Number</string>
</resources>