<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_group_profile">

        <EditTextPreference
            android:defaultValue="Sample Name"
            android:inputType="textPersonName"
            android:key="@string/pref_title_name"
            android:summary="@string/default_your_name"
            android:title="@string/pref_title_name" />

        <EditTextPreference
            android:defaultValue="sample.name@mail.com"
            android:inputType="textEmailAddress"
            android:key="@string/pref_title_email"
            android:summary="@string/default_your_email"
            android:title="@string/pref_title_email" />

        <EditTextPreference
            android:defaultValue="9435327190"
            android:inputType="phone"
            android:key="@string/pref_title_number"
            android:summary="@string/default_your_number"
            android:title="@string/pref_title_number" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_group_others">
        <Preference
            android:summary="@string/developer_email"
            android:title="@string/pref_title_dev_email" />
        <Preference
            android:summary="@string/copyright"
            android:title="@string/pref_title_copyright" />
        <Preference
            android:summary="@string/app_version"
            android:title="@string/pref_title_build" />
        <Preference
            android:key="@string/pref_title_term"
            android:title="@string/pref_title_term" />
    </PreferenceCategory>

</PreferenceScreen>
